Now LaTeX-escape strings that are inputted by the user